fix bug with ImageLabel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         gamewindow.h
         gamewindow.cpp
         gamewindow.ui
+        gamecatalog.ui
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET firstApp APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
