--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         gamewindow.cpp
         gamewindow.ui
         gamecatalog.ui
+        snakewindow.h snakewindow.cpp snakewindow.ui
 
     )
 # Define target properties for Android with Qt 6 as:
