--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set(PROJECT_SOURCES
         mainwindow.h
         mainwindow.ui
         ${TS_FILES}
+        snake.h
+        snake.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
